pic update attempt

--- a/projects.html
+++ b/projects.html
@@ -80,7 +80,7 @@
 		<div class="row centered">
 
 			<div class="col-lg-6">
-				<a href="projects/project03.html"><img class="img-responsive folio_icon center" src="assets/img/projects/MarketResearch_sample.png" alt="assets/img/loader.gif" /></a>
+				<a href="projects/project03.html"><img class="img-responsive folio_icon center" src="assets/img/projects/MarketResearch_sample2.PNG" alt="assets/img/loader.gif" /></a>
 				<h2>Market Research</h2>
 				<h4>Various self-done market research</h4>
 			</div>
