--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
 				<p>I love tinkering with different concepts and ideas. Sometime I'm successful, sometimes less so. Currently Under Construction</p>
 			</div>
 		</div>
-		<div class="row centered">	
+		<div class="row">	
 			<div class="col-lg-6">
 				<a href="projects/project01.html"><div><img class="img-responsive folio_icon center" src="assets/img/projects/SampleDetail.PNG" alt="assets/img/loader.gif" /></div></a>
 				<h2>Cartographer</h2>
