--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="/assets/img/favicon_io/favicon.ico">
+    <link rel="shortcut icon" href="/assets/img/favicon.ico">
 
     <title>Kenneth Chang | Projects </title>
 
@@ -62,12 +62,12 @@
 			</div>
 		</div>
 		<div class="row centered">	
-			<div class="col-lg-6 portfolio">
+			<div class="col-lg-6">
 				<a href="projects/project01.html"><div><img class="img-responsive folio_icon center" src="assets/img/projects/SampleDetail.PNG" alt="assets/img/loader.gif" /></div></a>
 				<h2>Cartographer</h2>
 				<h4>Using Graph Relation Networks to map influence </h4>
 			</div>
-			<div class="col-lg-6 portfolio">
+			<div class="col-lg-6">
 				<a href="projects/project02.html"><div><img class="img-responsive folio_icon center" src="assets/img/projects/GameDev_Sample.PNG" alt="assets/img/loader.gif" /></div></a>
 				<h2>Video Game Dev</h2>
 				<h4>My foray into trying to develop a video game</h4>
@@ -79,14 +79,14 @@
 		
 		<div class="row centered">
 
-			<div class="col-lg-6 portfolio">
-				<a href="projects/project03.html"><img class="img-responsive folio_icon center" src="assets/img/projects/MarketResearch_sample2.PNG" alt="assets/img/loader.gif" /></a>
+			<div class="col-lg-6">
+				<a href="projects/project03.html"><div><img class="img-responsive folio_icon center" src="assets/img/projects/MarketResearch_sample2.PNG" alt="assets/img/loader.gif" /></div></a>
 				<h2>Market Research</h2>
 				<h4>Various self-done market research</h4>
 			</div>
 
-			<div class="col-lg-6 portfolio">
-				<a href="projects/project04.html"><img class="img-responsive folio_icon center" src="assets/img/projects/HereBeDragons_sample.PNG" alt="assets/img/loader.gif" /></a>
+			<div class="col-lg-6">
+				<a href="projects/project04.html"><div><img class="img-responsive folio_icon center" src="assets/img/projects/HereBeDragons_sample.PNG" alt="assets/img/loader.gif" /></div></a>
 				<h2>Here be Dragons</h2>
 				<h4>Playing with Laser Etching</h4>
 			</div>
@@ -95,8 +95,8 @@
 
 		</div><!-- /row -->
 		<div class="row centered">
-			<div class="col-lg-6 portfolio">
-				<a href="projects/project05.html"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></a>
+			<div class="col-lg-6">
+				<a href="projects/project05.html"><div><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></div></a>
 				<h2>Google Trends Analytics</h2>
 				<h4>Various adventures into analyzing Google Trends.</h4>
 			</div>
