--- a/projects.html
+++ b/projects.html
@@ -63,12 +63,12 @@
 		</div>
 		<div class="row centered">	
 			<div class="col-lg-6">
-				<a href="projects/project01.html"><div><img class="img-responsive folio_icon center" src="assets/img/projects/SampleDetail.PNG" alt="assets/img/loader.gif" /></div></a>
+				<a href="projects/project01.html"><div class="portfolio"><img class="img-responsive folio_icon center" src="assets/img/projects/SampleDetail.PNG" alt="assets/img/loader.gif" /></div></a>
 				<h2>Cartographer</h2>
 				<h4>Using Graph Relation Networks to map influence </h4>
 			</div>
 			<div class="col-lg-6">
-				<a href="projects/project02.html"><div><img class="img-responsive folio_icon center" src="assets/img/projects/GameDev_Sample.PNG" alt="assets/img/loader.gif" /></div></a>
+				<a href="projects/project02.html"><div class="portfolio"><img class="img-responsive folio_icon center" src="assets/img/projects/GameDev_Sample.PNG" alt="assets/img/loader.gif" /></div></a>
 				<h2>Video Game Dev</h2>
 				<h4>My foray into trying to develop a video game</h4>
 			</div>
@@ -80,13 +80,13 @@
 		<div class="row centered">
 
 			<div class="col-lg-6">
-				<a href="projects/project03.html"><div><img class="img-responsive folio_icon center" src="assets/img/projects/MarketResearch_sample2.PNG" alt="assets/img/loader.gif" /></div></a>
+				<a href="projects/project03.html"><div class="portfolio"><img class="img-responsive folio_icon center" src="assets/img/projects/MarketResearch_sample2.PNG" alt="assets/img/loader.gif" /></div></a>
 				<h2>Market Research</h2>
 				<h4>Various self-done market research</h4>
 			</div>
 
 			<div class="col-lg-6">
-				<a href="projects/project04.html"><div><img class="img-responsive folio_icon center" src="assets/img/projects/HereBeDragons_sample.PNG" alt="assets/img/loader.gif" /></div></a>
+				<a href="projects/project04.html"><div class="portfolio"><img class="img-responsive folio_icon center" src="assets/img/projects/HereBeDragons_sample.PNG" alt="assets/img/loader.gif" /></div></a>
 				<h2>Here be Dragons</h2>
 				<h4>Playing with Laser Etching</h4>
 			</div>
@@ -96,7 +96,7 @@
 		</div><!-- /row -->
 		<div class="row centered">
 			<div class="col-lg-6">
-				<a href="projects/project05.html"><div><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></div></a>
+				<a href="projects/project05.html"><div class="portfolio"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></div></a>
 				<h2>Google Trends Analytics</h2>
 				<h4>Various adventures into analyzing Google Trends.</h4>
 			</div>
