--- a/work.html
+++ b/work.html
@@ -64,13 +64,13 @@
 		<div class="row centered">	
 			<div class="col-lg-6">
 
-				<a class="" href="work/work01.html"><img class="img-responsive folio_icon center" src="assets/img/work/work01-Prodeon/Logo_2.png" alt="" /></a>
+				<a class="" href="work/work01.html"><div class="portfolio"><img class="img-responsive folio_icon center" src="assets/img/work/work01-Prodeon/Logo_2.png" alt="" /></div></a>
 				<h2>Prodeon Medical / MedeonBio</h2>
 				<h4>R&D Engineer</h4>
 				<p>Jul 2016 - Current</p>
 			</div>
 			<div class="col-lg-6">
-				<a class="" href="work/work02.html"><img class="img-responsive folio_icon center" src="assets/img/work/work02-SAGE/logo_small.png" alt="" /></a>
+				<a class="" href="work/work02.html"><div class="portfolio"><img class="img-responsive folio_icon center" src="assets/img/work/work02-SAGE/logo_small.png" alt="" /></div></a>
 				<h2>SAGE</h2>
 				<h4>CTO</h4>
 				<p>Nov 2021 - May 2022</p>
