--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
 			<div class="col-lg-6 col-lg-offset-3 centered">
 				<h3>Projects</h3>
 				<hr>
-				<p>I love tinkering with different concepts and ideas. Sometime I'm successful, sometimes less so. Currently Under Construction</p>
+				<p>I love tinkering with different concepts and ideas. Currently Under Construction</p>
 			</div>
 		</div>
 		<div class="row centered">	
