--- a/projects/project05.html
+++ b/projects/project05.html
@@ -76,6 +76,15 @@
       </div>
     </div><!-- /row -->
     <hr>
+    <div class="row mt">	
+			<div>
+        <h2 id=sec1 alt="">SEOCarto</h2>
+				<p>
+          (WIP)
+        </p>
+
+      </div>
+    </div><!-- /row -->
 
     
 		
