--- a/projects.html
+++ b/projects.html
@@ -96,7 +96,7 @@
 		</div><!-- /row -->
 		<div class="row centered">
 			<div class="col-lg-6">
-				<a href="projects/project05.html"><div class="portfolio"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></div></a>
+				<a href="projects/project05.html"><div class="portfolio"><img class="img-responsive folio_icon center" src="assets/img/projects/SearchTrends_sample.PNG" alt="assets/img/loader.gif" /></div></a>
 				<h2>Google Trends Analytics</h2>
 				<h4>Various adventures into analyzing Google Trends.</h4>
 			</div>
