--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
 			</div>
 			<div class="col-lg-6">
 				<h2>Video Game Dev</h2>
-				<h4>My foray into trying to develop a video game</h4>
+				<h4>My foray into trying to developing video games</h4>
 				<a href="projects/project02.html"><div class="portfolio"><img class="img-responsive folio_icon center" src="assets/img/projects/GameDev_Sample.PNG" alt="assets/img/loader.gif" /></div></a>
 			</div>
 		</div><!-- /row -->
