--- a/projects/project02.html
+++ b/projects/project02.html
@@ -60,7 +60,7 @@
 				<h1>Video Game Development</h1>
 				<hr>
 				<p>Video games have always been one of my passions, and so I thought I would try my hand at making one.
-           I downloaded Unity, and after working my way through one of their tutorials, I will admit I was hooked.
+           I downloaded <a href="https://unity.com/">Unity</a>, and after working my way through one of their tutorials, I will admit I was hooked.
            Something about building something that you could then play seemed to scratch an itch. 
            I had plenty of ideas for games that I wanted to make and game mechanics I wanted to explore, so I thought I would give it a shot, and try building out some of them.
             It was also a chance for me to do some programming in a different field.
