--- a/projects/project04.html
+++ b/projects/project04.html
@@ -84,15 +84,20 @@
           The second challenge then came when converting the images to a usable vector image.
           There was a lot of complex detail that needed to be reduced down, and differing art styles between images meant I needed to constantly tweak how I did the conversion. 
           I finally settled on a design though, and had a number of prototypes made in differing colors, which you can see here. (pics)
-          After that, I needed to test how much material I would need in order to effectively create the book cover flaps. 
-          Rather then waste money, I figured I could just cut out some paper and use that as an alternative. 
+
+          <div>
+            <img src="../assets/img/projects/HereBeDragons/HBD_prototypes.jpg" style="max-width: 60vw;" class="centered">
+          </div>
+
         </p>
         <p>
           In addition to the design, I also had to do some other experimentation with how I would assemble it onto a notebook. 
-          Many of the designs I saw online used some 
+          Many of the designs I saw online had opening that allowed for sewing, but I felt this was beyond my artistic skill.
           Ultimately, to keep it simple, I decided to stick with adhesive instead. 
           I would leave addition material, almost like a book flap on each end to be folded over and glued, creating a sleeve that the front/back of the notebook could be inserted into.
           I had some gorilla glue laying around, and some experimentation proved that it held quite well on the suede. 
+          I also had to test exactly how much material I would need to leave in order to effectively create the flaps. 
+          Rather then waste money ordering more material, I figured I could just use paper cutouts as a stand-in.
         </p>
 
       </div>
