--- a/projects/project04.html
+++ b/projects/project04.html
@@ -83,7 +83,7 @@
           The downside to using character portrait backgrounds was that I couldn't always get a clean image, and it required some cropping in order to get something usable. 
           The second challenge then came when converting the images to a usable vector image.
           There was a lot of complex detail that needed to be reduced down, and differing art styles between images meant I needed to constantly tweak how I did the conversion. 
-          I finally settled on a design though, and had a number of prototypes made in differing colors, which you can see here. (pics)
+          I finally settled on a design though, and had a number of prototypes made in differing colors, which you can see below.
 
           <div>
             <img src="../assets/img/projects/HereBeDragons/HBD_prototypes.jpg" style="max-width: 60vw;" class="centered">
