--- a/projects/project04.html
+++ b/projects/project04.html
@@ -86,7 +86,7 @@
           I finally settled on a design though, and had a number of prototypes made in differing colors, which you can see below.
 
           <div>
-            <img src="../assets/img/projects/HereBeDragons/HBD_prototypes.jpg" style="max-width: 60vw;" class="centered">
+            <img src="/assets/img/projects/HereBeDragons/HBD_prototypes-min.jpg" style="max-width: 60vw;" class="centered">
           </div>
 
         </p>
