--- a/work/work02.html
+++ b/work/work02.html
@@ -363,13 +363,13 @@
 
         <div class="row centered">
           <div class="col-lg-6">
-            <a><img class="img-responsive folio_icon center" src="/assets/img/work/work02-SAGE/etch4_Velganos.jpg" /></a>
+            <a><div class="portfolio"><img class="img-responsive folio_icon center" src="/assets/img/work/work02-SAGE/etch4_Velganos.jpg" /></div></a>
             <h4>Velganos</h4>
             <h5>Laser Etched on 0.025" Black Malamine MDF</h5>
             <p>Lost Ark Raid Boss. The boss's theme was light and shadow, so I thought the black/light contrast was appropriate.</p>
           </div>
           <div class="col-lg-6">
-            <a><img class="img-responsive folio_icon center" src="/assets/img/work/work02-SAGE/etch2_ArkivesLogo.jpg" /></a>
+            <a><div class="portfolio"><img class="img-responsive folio_icon center" src="/assets/img/work/work02-SAGE/etch2_ArkivesLogo.jpg" /></div></a>
             <h4>Arkives Arena Logo</h4>
             <h5>Laser Etched on 0.02" Silver on Black Magnet</h5>
             <p>The Logo for the tournament series we organized, Arkives Arena. The magnet wasn't super strong, but stuck to fridges fine.</p>
@@ -377,13 +377,13 @@
         </div><!-- /row -->
         <div class="row centered">	
           <div class="col-lg-6">
-            <a><img class="img-responsive folio_icon center" src="/assets/img/work/work02-SAGE/etch3_DestroyerLogo.jpg" /></a>
+            <a><div class="portfolio"><img class="img-responsive folio_icon center" src="/assets/img/work/work02-SAGE/etch3_DestroyerLogo.jpg" /></div></a>
             <h4>Destroyer Class Logo</h4>
             <h5>Laser Etched on 0.22" White Oak Veneer MDF </h5>
             <p>The Class icon for Destroyer, one of the many classes you could play as for Lost Ark.</p>
           </div>
           <div class="col-lg-6">
-            <a><img class="img-responsive folio_icon center" src="/assets/img/work/work02-SAGE/etch_1_valtan_2.jpg" title="" /></a>
+            <a><div class="portfolio"><img class="img-responsive folio_icon center" src="/assets/img/work/work02-SAGE/etch_1_valtan_2.jpg" title="" /></div></a>
             <h4>Demon Commander Valtan</h4>
             <h5>Laser Etched on 0.12" Glass Green Acryllic </h5>
             <p>Lost Ark Villain and Raid Boss. Due to the green acryllic used, shining a light through the glass resulted in a pretty cool green glow of the etch.</p>
@@ -391,7 +391,7 @@
     
         </div><!-- /row -->
 
-        <p>My work here also inspired one of my other projects, <a><i>Here Be Dragons Link after that page is up</i></a></p>
+        <p>My work here also inspired one of my other projects, <a href="/projects/project04.html">Here Be Dragons</a>.</p>
 
     </div>
 	
