--- a/about.html
+++ b/about.html
@@ -55,14 +55,20 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 centered">
-					<img src="assets/img/about_profile_cropped.jpg" title="It's Photoshop free I swear." style="max-width: 300px; max-height: 300px;">
+					<img src="assets/img/about_profile_cropped.jpg" title="Its me." style="max-width: 300px; max-height: 300px;">
 					<h1>About me</h1>
-					<p>I am a results driven engineer passionate about bringing about positive impact. Curious by nature, I love exploring different topics and fields, and then bringing them together to drive better understanding and create new innovations.</p>
-					<p>I believe in </p>
-					<p>My current goals are to ...</p>
+					<p>
+						I am a results driven engineer passionate about bringing about positive impact.
+						I love exploring different topics and fields, and then bringing them together to create new innovations and unlock new knowledge.
+					</p>
+					<p> 
+						My current passion is in narrative and topic analysis, particularly on how ideas spread, and how people's behaviors are affected by those ideas.
+						I hope to not only gain better understanding on these topics, but also to apply them to help drive better governance and decision making.
+						
+					</p>
 				</div><!-- /col-lg-8 -->
 
-				<div class="row mt centered">	
+				<!-- <div class="row mt centered">	
 					<div class="col-lg-3">
 						<span class="glyphicon glyphicon-book"></span>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -82,7 +88,7 @@
 						<span class="glyphicon glyphicon-globe"></span>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 					</div>
-				</div>
+				</div> -->
 
 			</div><!-- /row -->
 	    </div> <!-- /container -->
@@ -112,7 +118,7 @@
 	</div><!-- /container -->
 
 	<div class="container">
-		<div class="col-lg-8 col-lg-offset-2 centered" ><h4>Resume?</h4></div>
+		<div class="col-lg-8 col-lg-offset-2 centered" ><h4><a>My most Recent Resume (link)</a></h4></div>
 	</div>
 	
 	
