--- a/about.html
+++ b/about.html
@@ -59,7 +59,9 @@
 					<h1>About me</h1>
 					<p>
 						I am a results driven engineer passionate about bringing about positive impact.
-						I love exploring different topics and fields, and then bringing them together to create new innovations and unlock new knowledge.
+						I have a desire to know more about the world, to see and understand how it functions.
+						This drives my love of exploring different topics and fields, and then bringing them together to create new innovations and unlock new knowledge.
+
 					</p>
 					<p> 
 						My current passion is in narrative and topic analysis, particularly on how ideas spread, and how people's behaviors are affected by those ideas.
