--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
 	</div><!-- /container -->
 
 	<div class="container">
-		<div class="col-lg-8 col-lg-offset-2 centered" ><h4><a href="assets/pdf/Resume_Kenneth_Chang_07.2019.pdf">My most Recent Resume</a></h4></div>
+		<div class="col-lg-8 col-lg-offset-2 centered" ><h4><a href="assets/pdf/Resume_Kenneth_Chang_07.2019.pdf">My most Recent Resume (Note this is not updated as often compared to this site)</a></h4></div>
 	</div>
 	
 	
