--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
 			<div class="col-lg-6 col-lg-offset-3 centered">
 				<h3>CONTACT ME</h3>
 				<hr>
-				<p>You can reach me at <a href="https://www.linkedin.com/in/kennethcchang/">LinkedIn</a> or directly through this email: kenneth dot chang 94 at gmail dot com</p>
+				<p>You can reach me at <a href="https://www.linkedin.com/in/kennethcchang/">LinkedIn</a> or directly through this email: <br>kenneth dot chang 94 at gmail dot com</p>
 			</div>
 		</div>
 		<!-- <div class="row mt">	
