--- a/projects/project03.html
+++ b/projects/project03.html
@@ -137,6 +137,7 @@
           I figured that one could use this to do some pretty interesting analysis, in the "follow the money" vein.
           For example, I had a hypothesis that you could use this to back calculate a companies marketing priorities, and therefore gain intelligence on a companies business strategy.
           If I ever return to this, this would definitely be something I would want to look into.
+          I wrote up a project proposal for this before, which you can see <a href="/assets/pdf/Project Proposal-PaymentFlow.pdf">here</a>.
  
         </p>
 
