--- a/projects/project01.html
+++ b/projects/project01.html
@@ -182,7 +182,7 @@
           To better simulate a use case, I approached from the perspective of an analyst tasked with putting together a profile of an author.
           I purposfully chose one that we already worked with at my day job, since this would allow me to validate my findings.
           You can see the final report that I put together at the Google Drive link below: <br>
-          <a href="https://drive.google.com/file/d/1bb5DIm9BjjmYwgM7HVslVs5ZhpzzUwRn/view?usp=sharing">Sample Profile</a>
+          <a href="https://drive.google.com/file/d/1bb5DIm9BjjmYwgM7HVslVs5ZhpzzUwRn/view?usp=sharing">Sample Author Profile</a>
         </p>
         
 
@@ -193,7 +193,7 @@
     <hr>
     <div class="row mt">	
 			<div>
-        <h2 id=sec5 alt="">future efforts and things to improve on </h2>
+        <h2 id=sec5 alt="">Feedback and Future Improvements</h2>
 
         <P>
           After finishing up the prototype, I looked to try and get validation on my idea from marketing professionals I knew. 
