--- a/projects/project01.html
+++ b/projects/project01.html
@@ -173,10 +173,10 @@
         <h2 id=sec4 alt="">Analytics</h2>
 				<p>
           
-          After 
-          after the database prototype was set up, next came time to run analysis and use the database.
-          using the db, ie running Pagerank, etc. link our sample analytical product 
-
+          After the database prototype was set up, next came time to run analysis and use the database.
+          The first effort consisted of running PageRank on the graph.
+          The second consisted of creating pre-set cypher queries that could be used, ie find all articles by a single author related to a certain topic.
+          In programming terms, this was relatively straightforward, mainly consited of creating different queries.
         </p>
         <p>
           To better simulate a use case, I approached from the perspective of an analyst tasked with putting together a profile of an author.
