--- a/projects/project01.html
+++ b/projects/project01.html
@@ -176,10 +176,16 @@
           The first effort consisted of running PageRank on the graph.
           The second consisted of creating pre-set cypher queries that could be used, ie find all articles by a single author related to a certain topic.
           In programming terms, this was relatively straightforward, mainly consited of creating different queries.
+          
         </p>
         <p>
           To better simulate a use case, I approached from the perspective of an analyst tasked with putting together a profile of an author.
           I purposfully chose one that we already worked with at my day job, since this would allow me to validate my findings.
+
+          Here the graph allowed for some interesting analysis that would be alot more difficult to do otherwise.
+          The first was looking at the collaboration graph.
+          This let me see not only just who collaborated with who, but also allowed for identifying communities around the author.
+          The graph also allowed me to more easily analyze influence: who an author cited, who cited them, and on what topics.   
           You can see the final report that I put together at the Google Drive link below: <br>
           <a href="https://drive.google.com/file/d/1bb5DIm9BjjmYwgM7HVslVs5ZhpzzUwRn/view?usp=sharing">Sample Author Profile</a>
         </p>
