--- a/travel.html
+++ b/travel.html
@@ -64,13 +64,13 @@
 		<div class="row centered">	
 			<div class="col-lg-4">
 
-				<a class="green" href="work/work01.html"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></a>
-				<h2>Tip1</h2>
+				<a class="green" href="work/work01.html"><img class="img-responsive folio_icon center" src="" alt="/assets/img/loader.gif" /></a>
+				<h2>Trip1</h2>
 				<h4>Insert Place</h4>
 				<p>Oct 2021</p>
 			</div>
 			<div class="col-lg-4">
-				<a class="green" href="work/work02.html"><img class="img-responsive folio_icon center" src="" alt="assets/img/loader.gif" /></a>
+				<a class="green" href="work/work02.html"><img class="img-responsive folio_icon center" src="" alt="/assets/img/loader.gif" /></a>
 				<h2>Trip2</h2>
 				<h4>Place 2</h4>
 				<p>July 2021</p>
