--- a/projects/project04.html
+++ b/projects/project04.html
@@ -82,6 +82,7 @@
           They had a variety of dragon related assets in game, particularly in the character portrait backgrounds.
           The downside to using character portrait backgrounds was that I couldn't always get a clean image, and it required some cropping in order to get something usable. 
           The second challenge then came when converting the images to a usable vector image.
+          Just like when I did this for <a href="/work/work02.html">SAGE</a>, I primarily did this in Inkscape, but I also had to learn and use some basic <a href="https://www.gimp.org/">GIMP</a> to clean up the image. 
           There was a lot of complex detail that needed to be reduced down, and differing art styles between images meant I needed to constantly tweak how I did the conversion. 
           I finally settled on a design though, and had a number of prototypes made in differing colors, which you can see below.
 
