--- a/work/work02.html
+++ b/work/work02.html
@@ -347,7 +347,7 @@
 
         <p>My excuse to use get to play with lasers. One of the major expenses we ran into was the cost of prize money, and this was a challenge not only financially but also from a marketing perspective.
           After all, if every tournament is offering money, it becomes hard to stand out unless you drop huge sums. We didn't huge amounts of funds, so effort was put into exploring potential alternatives that we could offer as prizes.  
-          Based on my experience with laser work at my actual job at <a href="../work/work01.html">Prodeon</a>, I struck upon the idea of getting laser etches made based off of the game assets. Some quick searching of laser etching services confirmed 
+          Based on my experience with laser work at my actual job at <a href="/work/work01.html">Prodeon</a>, I struck upon the idea of getting laser etches made based off of the game assets. Some quick searching of laser etching services confirmed 
           that this would solve both of our issues. Costs from laser etching were primarily in setup, so we could be pretty generouse with prizing without breaking the bank. As a rough calculation, using the Velganos etch below as 
           an assumption, we could award every member of the first place team for each region we held tournaments in, a plaque like it, would only cost around $200. This was over 80% cheaper compared to our original cash prizing structure, and 
           would put us on the map as the tournament that had the most unique prizes. A win on both fronts.
