--- a/projects/project02.html
+++ b/projects/project02.html
@@ -119,6 +119,7 @@
           One idea I had was that rather then having everything available, the abilities and weapon powerups would randomly show up in the shop as well.
           This would force the player to adapt and play differently every time based on what the shop gave them. 
           Overall though, I am proud of what I was able to create as my first game. 
+          You can find the game files <a href="https://github.com/scryvener/GameDev-Chimera/tree/main">here</a>.
         </p>
 
       </div>
