--- a/projects/project01.html
+++ b/projects/project01.html
@@ -134,6 +134,7 @@
           The next was to simplify the insertion process. 
           I had previously written it as an insertion script, but looking through the neo4j documentation, it seemed like at a large enough scale, it was much easier to just use the Load CSV function.
           This reduced many lines of code down to a few lines of Cypher, and helped greatly simplify the process. 
+          You can see some of the cypher queries I wrote <a href="https://github.com/scryvener/Cartographer/blob/main/Cypher/PubmedCartographer%20neo4j.py">here</a>.
         </p>
         <p>
           Since I had intended this as a prototype run, I implemented certain prepcoressing/data cleaning steps but had to skip others. 
