--- a/projects/project01.html
+++ b/projects/project01.html
@@ -158,7 +158,7 @@
           I had originally inteded to use this to allow association of influence with certain hospitals, universities, etc. 
           However this turned out to be far more difficult than anticipated.
           Just like authors and dates, there was a wide variety of formats and precision that were detailed.
-          In one case, I had an article with three authors, and despite all belonging to the same institution, listed it three different ways. 
+          In one case, I had an article with three authors, and despite all belonging to the same institution, listed the institution three different ways. 
           This became nightmare to disambiguate. 
           I explored some different methods of doing so, including by looking at things like cosine similarity between the different listed, and combining them if they met a threshold, but there was no way that consistently worked for all edge cases.
           Given the rickety state of this, I ultimately decided to skip it for the prototype phase. 
