--- a/work/work01.html
+++ b/work/work01.html
@@ -178,7 +178,7 @@
         </P>
         <p>
           When the time came for clinical trials, I was on the ground in Europe, Asia, and Australia training the first physicians for the First in Human <a href="https://clinicaltrials.gov/ct2/show/NCT03758222">EXPANDER-1 Trial</a>.
-          I also provided remote technical support and helped execute device deficiency investigations. 
+          I also provided remote technical support and helped execute device deficiency investigations. I am planning to continue this support as the project moves to <a href="https://clinicaltrials.gov/ct2/show/NCT05400980">IDE trials</a>.
         </p>
 
         
@@ -191,7 +191,7 @@
         <h2 id=sec5 alt="">Marketing and Physician Feedback</h2>
 
         <P> Getting feedback from end-users of the product you develop is important, and at Prodeon, I regularly interfaced with Physicians to get their feedback on design decisions. Through local physicians,
-          we were able to drive a rapid prototype schedule. We would frequently develop using a shotgun approach of 3-4 different concpets or variations, and then bring them to evaluate. Through this rapid pace, 
+          we were able to drive a rapid prototype schedule. We would frequently develop using a shotgun approach of 3-4 different concepts or variations, and then bring them to evaluate. Through this rapid pace, 
           we were able to go from concept to a First-in-Human trial in around 2 years. 
         </P>
         <p>One highlight was when I got to attend the 2018 American Urology Association meeting in San Francisco . It was an invaluable experience, where we were able to demo to both 
