--- a/travel.html
+++ b/travel.html
@@ -64,16 +64,14 @@
 		<div class="row centered">	
 			<div class="col-lg-4">
 
-				<a class="green" href="work/work01.html"><img class="img-responsive folio_icon center" src="/assets/img/loader.gif" alt="" /></a>
-				<h2>Trip1</h2>
-				<h4>Insert Place</h4>
-				<p>Oct 2021</p>
+				<a class="" href="work/work01.html"><img class="img-responsive folio_icon center" src="/assets/img/loader.gif" alt="" /></a>
+				<h4>Edinburgh, Scotland, UK</h4>
+				<p>Aug 2022</p>
 			</div>
 			<div class="col-lg-4">
-				<a class="green" href="work/work02.html"><img class="img-responsive folio_icon center" src="/assets/img/loader.gif" alt="" /></a>
-				<h2>Trip2</h2>
-				<h4>Place 2</h4>
-				<p>July 2021</p>
+				<a class="" href="work/work02.html"><img class="img-responsive folio_icon center" src="/assets/img/loader.gif" alt="" /></a>
+				<h4>Honolulu, Hawaii, USA</h4>
+				<p>Dec 2021</p>
 			</div>
 
 		</div><!-- /row -->
