--- a/travel.html
+++ b/travel.html
@@ -58,18 +58,18 @@
 			<div class="col-lg-6 col-lg-offset-3 centered">
 				<h3>Travel</h3>
 				<hr>
-				<p>I've been to a lot of places, sometimes for work, sometimes for fun. Click to see more about my trips. Currently Under Construction</p>
+				<p>I've been to a lot of places, sometimes for work, sometimes for fun. Currently under construction. I would like to turn this into somewhat of a travel blog in the future, but we'll see how it turns out.</p>
 			</div>
 		</div>
 		<div class="row centered">	
 			<div class="col-lg-4">
 
-				<a class="" href="work/work01.html"><img class="img-responsive folio_icon center" src="/assets/img/loader.gif" alt="" /></a>
+				<a class="" href=""><div class="portfolio"><img class="img-responsive folio_icon center" src="/assets/img/travel/scotland-min.jpg" alt="" /></div></a>
 				<h4>Edinburgh, Scotland, UK</h4>
 				<p>Aug 2022</p>
 			</div>
 			<div class="col-lg-4">
-				<a class="" href="work/work02.html"><img class="img-responsive folio_icon center" src="/assets/img/loader.gif" alt="" /></a>
+				<a class="" href=""><div class="portfolio"><img class="img-responsive folio_icon center" src="/assets/img/travel/scotland-min.jpg" alt="" /></div></a>
 				<h4>Honolulu, Hawaii, USA</h4>
 				<p>Dec 2021</p>
 			</div>
